--- a/topic_01_intro.ipynb
+++ b/topic_01_intro.ipynb
@@ -54,9 +54,6 @@
     "23 \\div 5  \n",
     "$$\n",
     "$$\n",
-    "sin(45)  \n",
-    "$$\n",
-    "$$\n",
     "\\sqrt{2}  \n",
     "$$\n",
     "\n",
@@ -109,7 +106,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you want to find some help on this command, you can type 'help(sqrt)'."
+    "Most maths functions are accessed from the math library. For example, to calculate sin(2), type `math.sin(2)`.\n",
+    "\n",
+    "If you want to find some help on this command, you can type 'help(math.sin)'."
    ]
   },
   {
@@ -118,7 +117,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "help(math.sqrt)"
+    "help(math.sin)"
    ]
   },
   {
