--- a/topic_01_intro.ipynb
+++ b/topic_01_intro.ipynb
@@ -38,7 +38,7 @@
    "source": [
     "When you open Thonny you will see something similar to the following:\n",
     "\n",
-    "<img src=\"./img/thonny_screenshot.png\" alt=\"Thonny opening window\" align='center' style=\"width: 800px;\"/>\n",
+    "<img src=\"./img/Python.svg.png\" alt=\"Python symbol\" align='right' style=\"width: 200px;\"/><img src=\"./img/thonny_screenshot.png\" alt=\"Thonny opening window\" align='center' style=\"width: 800px;\"/>\n",
     "\n",
     "The shell is where you can type Python commands. This is also how you can use Python as a calculator. The window above the shell is where you can type the code for programs. There are other windows that can be opened to view different parameters. We will look at these later as we need them. For now we will focus on the shell window.\n",
     "\n",
