--- a/topic_01_intro.ipynb
+++ b/topic_01_intro.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "\n",
     "## What is Python?\n",
-    "Python is a high-level computing language that allows you to perform computations, visualise data, and write programs. Fuyll documentation on Python is available [here](https://docs.python.org/3/).\n",
+    "Python is a high-level computing language that allows you to perform computations, visualise data, and write programs. Full documentation on Python is available [here](https://docs.python.org/3/).\n",
     "\n",
     "## Thonny IDE\n",
     "There are many different free IDEs available to develop Python programs. Examples include Idle, Spyder, and PyCharm. We are going to use [Thonny](https://thonny.org), which has a straightforward interface suitable for those beginning programming. This video gives an overview of Thonny."
