--- a/topic_01_intro.ipynb
+++ b/topic_01_intro.ipynb
@@ -389,7 +389,7 @@
     "When outputting the numbers to the shell using the `print` command, you need to convert the float variables to strings using the `str()` command.\n",
     "\n",
     "## Exercises\n",
-    "Write MATLAB scripts to do the following. Ensure your scripts are easy to read and use comments where appropriate.\n",
+    "Write Python scripts to do the following. Ensure your scripts are easy to read and use comments where appropriate.\n",
     "1.\tAsk the user for the diameter of a sphere and calculate the volume of it. Tell the user.\n",
     "2.\tAsk the user for the strain and the Young's modulus. Calculate the stress and tell the user.\n",
     "3.\tAsk the user for the kinematic viscosity of a fluid, the diameter of a pipe, and the velocity of the fluid. Calculate the Reynold's number and tell the user.\n"
