--- a/topic_01_intro.ipynb
+++ b/topic_01_intro.ipynb
@@ -348,7 +348,7 @@
    "source": [
     "# This programme asks for your name and then it will say hello to you\n",
     "\n",
-    "first_name = input('What is your first name? ');\n",
+    "first_name = input('What is your first name? ')\n",
     "\n",
     "print('Hello there ' + first_name + ', how are you?')\n"
    ]
@@ -372,10 +372,10 @@
    "source": [
     "# Program asks for two numbers and adds them.\n",
     "\n",
-    "a = float(input('What is the first number? '));\n",
-    "b = float(input('What is the second number? '));\n",
+    "a = float(input('What is the first number? '))\n",
+    "b = float(input('What is the second number? '))\n",
     "\n",
-    "c = a + b;\n",
+    "c = a + b\n",
     "\n",
     "print('The sum of ' + str(a) + ' and ' + str(b) + ' is ' + str(c) + '.')\n"
    ]
