--- a/topic_02_debugging_if_functions.ipynb
+++ b/topic_02_debugging_if_functions.ipynb
@@ -51,7 +51,7 @@
     "\n",
     "## Excercises\n",
     "1.\tCorrect the remaining errors in the script above.\n",
-    "2.\tCopy the following code into a script and correct it. Read the messages MATLAB is telling you to find the errors."
+    "2.\tCopy the following code into a script and correct it. Read the messages Thonny is telling you to find the errors."
    ]
   },
   {
