--- a/topic_02_debugging_if_functions.ipynb
+++ b/topic_02_debugging_if_functions.ipynb
@@ -183,10 +183,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The maximum stress in the component is 12.440 MPa when the strain is 0.015.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'The maximum stress in the component is {12.44:5.3f} MPa when the strain is {0.015:5.3f}.')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -197,9 +207,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    1234.1\n",
+      " 1234.057\n",
+      " 1234.056789\n",
+      "     1234.05679\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Programme to demonstrate the use of %f\n",
     "random_number = 1234.056789; # Just picking a random number\n",
@@ -225,9 +247,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sum of the numbers 5 and 6 is 11.\n"
+     ]
+    }
+   ],
    "source": [
     "# This is a function that adds the two numbers passed into it\n",
     "def add_numbers(a, b):\n",
