--- a/topic_02_debugging_if_functions.ipynb
+++ b/topic_02_debugging_if_functions.ipynb
@@ -76,7 +76,7 @@
     "## Conditional statements: using if/elseif/else statements to make decisions\n",
     "\n",
     "Conditional statements allow you to execute certain sections of code when you run the program. If a condition is true then a section of code will be executed. If the condition is false then that section of code is skipped.\n",
-    "<img src=\"./img/if.PNG\" alt=\"error messages\" align='center' style=\"width: 400px;\"/>\n",
+    "<img src=\"./img/if.png\" alt=\"error messages\" align='center' style=\"width: 400px;\"/>\n",
     "The simplest conditional statement is the if statement. Consider the following code"
    ]
   },
@@ -104,7 +104,7 @@
     "== is called a relational operator or comparison operator. It checks whether the two objects either side of the == are equal. More information on comparison operators can be found [here](https://www.tutorialspoint.com/python/python_basic_operators.htm) or on page 20 of your notes.\n",
     "\n",
     "We can extend the above programme to tell the user if they did not guess the correct number. This is done using an if/else block. In this case if the condition is false then another section of code is executed.\n",
-    "<img src=\"./img/if_else.PNG\" alt=\"error messages\" align='center' style=\"width: 300px;\"/>"
+    "<img src=\"./img/if_else.png\" alt=\"error messages\" align='center' style=\"width: 300px;\"/>"
    ]
   },
   {
@@ -130,7 +130,7 @@
     "Note the spacing of the code in the above example. The `else` statement is aligned with its respective `if` statement. The code after the `if` and `else` statements are indented 4 spaces. This is a requirement in Python.\n",
     "\n",
     "You can programme for more choices using the if/elif/else block.\n",
-    "<img src=\"./img/if_elseif_else.PNG\" alt=\"error messages\" align='center' style=\"width: 500px;\"/>"
+    "<img src=\"./img/if_elseif_else.png\" alt=\"error messages\" align='center' style=\"width: 500px;\"/>"
    ]
   },
   {
