--- a/topic_03_for_while.ipynb
+++ b/topic_03_for_while.ipynb
@@ -150,7 +150,7 @@
     "## Exercises\n",
     "Create a Python script to :\n",
     "1.\tCalculate the factorial of a user specified number.\n",
-    "2.\tCalculate the distance an object travels downwards every 0.1 seconds when dropped.\n",
+    "2.\tCalculate the distance an object travels downwards every 1 second when dropped.\n",
     "\n",
     "## While loops\n",
     "The other method of repeating blocks of code is using a while statement. While loops repeatedly execute a block of code as long as a condition is true."
