--- a/topic_03_for_while.ipynb
+++ b/topic_03_for_while.ipynb
@@ -138,7 +138,7 @@
     "number = int(input('Please enter a positive integer: '))\n",
     "\n",
     "sum = 0\n",
-    "for i in range(0,number):\n",
+    "for i in range(0,number + 1):\n",
     "    sum = sum + i\n",
     "print(f'The sum of the positive integers up to {number} is {sum}.')\n"
    ]
@@ -226,8 +226,8 @@
    "source": [
     "## Exercises\n",
     "Create MATLAB scripts to do the following:\n",
-    "1.\tCreate a guessing game using a for loop. Give the user so many chances to guess a number between 1 and 10. Tell the user whether there guess is too low or too high. Use the script you created when doing if statements as a template.\n",
-    "2.\tCreate a guessing game similar to the above but using a while loop."
+    "3.\tCreate a guessing game using a for loop. Give the user so many chances to guess a number between 1 and 10. Tell the user whether there guess is too low or too high. Use the script you created when doing if statements as a template.\n",
+    "4.\tCreate a guessing game similar to the above but using a while loop."
    ]
   }
  ],
