--- a/topic_03_for_while.ipynb
+++ b/topic_03_for_while.ipynb
@@ -138,7 +138,7 @@
     "number = int(input('Please enter a positive integer: '))\n",
     "\n",
     "sum = 0\n",
-    "for i in range(0,number + 1):\n",
+    "for i in range(0,number):\n",
     "    sum = sum + i\n",
     "print(f'The sum of the positive integers up to {number} is {sum}.')\n"
    ]
@@ -150,7 +150,7 @@
     "## Exercises\n",
     "Create a Python script to :\n",
     "1.\tCalculate the factorial of a user specified number.\n",
-    "2.\tCalculate the distance an object travels downwards every 1 second when dropped.\n",
+    "2.\tCalculate the distance an object travels downwards every second when dropped.\n",
     "\n",
     "## While loops\n",
     "The other method of repeating blocks of code is using a while statement. While loops repeatedly execute a block of code as long as a condition is true."
@@ -225,10 +225,20 @@
    "metadata": {},
    "source": [
     "## Exercises\n",
-    "Create MATLAB scripts to do the following:\n",
+    "Create Python scripts to do the following:\n",
     "3.\tCreate a guessing game using a for loop. Give the user so many chances to guess a number between 1 and 10. Tell the user whether there guess is too low or too high. Use the script you created when doing if statements as a template.\n",
-    "4.\tCreate a guessing game similar to the above but using a while loop."
+    "4.\tCreate a guessing game similar to the above but using a while loop.\n",
+    "5.  Write a script to calculate:\n",
+    "$$f(n)=\\frac{1}{e^n-1} for -5\\le n\\le5\\text{, where }n\\text{ is an integer.}$$\n",
+    "Output the results in the form of a table where _n_ is the first column and _f_(_n_) is the second column."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -247,7 +257,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
