--- a/topic_03_for_while.ipynb
+++ b/topic_03_for_while.ipynb
@@ -230,7 +230,7 @@
     "4.\tCreate a guessing game similar to the above but using a while loop.\n",
     "5.  Write a script to calculate:\n",
     "$$f(n)=\\frac{1}{e^n-1} for -5\\le n\\le5\\text{, where }n\\text{ is an integer.}$$\n",
-    "Output the results in the form of a table where _n_ is the first column and _f_(_n_) is the second column."
+    "Output the results in the form of a table where _n_ is the first column and _f_(_n_) is the second column. Skip the calculation when n=0."
    ]
   },
   {
