--- a/topic_04_newtons_method.ipynb
+++ b/topic_04_newtons_method.ipynb
@@ -15,7 +15,7 @@
     "What is a root? Consider a function $f(x)=x^2-5x+6$. A root of the equation $f(x)$ is a value $x_0$ such that $f(x_0)=0$. In this case, $f(x)$ has two roots: $x=2$ and $x=3$.\n",
     "$$f(2)=2^2-5 \\times 2 + 6 = 0$$ \n",
     " \n",
-    "If we plot the function   we can see where the graph crosses the x-axis. The points where it crosses the x-axis are the roots of $f(x)$. Don't worry about the code used to plot the function below. We will learn how to plot graphs later. Just run the cell."
+    "If we plot the function   we can see where the graph crosses the x-axis. The points where it crosses the x-axis are the roots of $f(x)$. Don't worry about the code used to plot the function below. We will learn how to plot graphs later. Copy the code into Thonny and run."
    ]
   },
   {
