--- a/topic_04_newtons_method.ipynb
+++ b/topic_04_newtons_method.ipynb
@@ -56,7 +56,7 @@
     "\n",
     "Note in the diagram how $x_1$ is closer to **o** than $x_0$ and that $x_2$ is closer than $x_1$.\n",
     "\n",
-    "<img src=\"./img/newtons_method.svg.PNG\" alt=\"Newton's method plotted\" align='center' style=\"width: 600px;\"/>\n",
+    "<img src=\"./img/newtons_method.svg.png\" alt=\"Newton's method plotted\" align='center' style=\"width: 600px;\"/>\n",
     "\n",
     "It can be shown that $x_1$ is given by\n",
     "$$x_1=x_0-\\frac{f\\left(x_0\\right)}{f^\\prime\\left(x_0\\right)}$$\n",
