--- a/topic_04_newtons_method.ipynb
+++ b/topic_04_newtons_method.ipynb
@@ -90,13 +90,14 @@
     "x_initial = 3.0 # This is the initial guess\n",
     "max_iter = 20 # % This is the maximum number of iterations allowed\n",
     "tolerance = 1e-4 #% Tolerance for which f(x) must be less than to determine root\n",
+    "num_decimal_places = 4\n",
     "\n",
     "x0 = x_initial\n",
     "\n",
     "for i in range(1,max_iter):\n",
     "\n",
     "    if abs(fx(x0)) < tolerance:\n",
-    "        print(f'\\nThe root of the equation is {round(x0,4)}.\\n')\n",
+    "        print(f'\\nThe root of the equation is {round(x0,num_decimal_places)}.\\n')\n",
     "        break\n",
     "    \n",
     "    x1 = x0 - fx(x0) / dfdx(x0); # Newton's method equation\n",
@@ -114,7 +115,8 @@
     "## Exercises\n",
     "Modify the code above to incorporate the following features:\n",
     "1.\tOutput the results of each iteration in the form of a table. The first column gives the iteration number, the second column gives $x_0$, and the third column gives  $f(x_0)$.\n",
-    "2.\tIf the root is not found within the maximum number of iterations, a message is output to the command window.\n",
+    "2.  Put the code for the Newton method in a function. The input arguments for the function are the initial guess, maximum iterations, and the tolerance. The output arguments are a variable indicating whether the root is found and the root of the equation.\n",
+    "3.  Call the function in 2 to find the root of the equation. Display appropriate messages to the shell indicating whether the root has been found and what it is.\n",
     "3.\tUse a `while` loop in place of a `for` loop.\n",
     "\n",
     "### Problem 1\n",
@@ -179,8 +181,8 @@
    "source": [
     "## Exercises\n",
     "Modify the code above to incorporate the following features:\n",
-    "1.\tOutput the results of each iteration in the form of a table. The first column gives the iteration number, the second column gives $x_0$, the third column gives  $x_1$, the fourth column gives $g(x_0)$, and the fifth column gives $g(x_1)$.\n",
-    "2.\tIf the root is not found within the maximum number of iterations, a message is output to the command window.\n",
+    "5.\tOutput the results of each iteration in the form of a table. The first column gives the iteration number, the second column gives $x_0$, the third column gives  $x_1$, the fourth column gives $g(x_0)$, and the fifth column gives $g(x_1)$.\n",
+    "6.\tIf the root is not found within the maximum number of iterations, a message is output to the command window.\n",
     "\n",
     "## Problem 3\n",
     "The viscous or frictional loss in pipe flow expressed in terms of the friction factor $f$ is given by Colebrook’s equation:\n",
