--- a/topic_03_for_while.ipynb
+++ b/topic_03_for_while.ipynb
@@ -226,7 +226,7 @@
    "source": [
     "## Exercises\n",
     "Create Python scripts to do the following:\n",
-    "3.\tCreate a guessing game using a for loop. Give the user so many chances to guess a number between 1 and 10. Tell the user whether there guess is too low or too high. Use the script you created when doing if statements as a template.\n",
+    "3.\tCreate a guessing game using a for loop. Give the user so many chances to guess a number between 1 and 10. Tell the user whether their guess is too low or too high. Use the script you created when doing if statements as a template.\n",
     "4.\tCreate a guessing game similar to the above but using a while loop.\n",
     "5.  Write a script to calculate:\n",
     "$$f(n)=\\frac{1}{e^n-1} for -5\\le n\\le5\\text{, where }n\\text{ is an integer.}$$\n",
