--- a/topic_04_newtons_method.ipynb
+++ b/topic_04_newtons_method.ipynb
@@ -87,12 +87,11 @@
     "    return y\n",
     "\n",
     "# This script calculates the roots of an equation\n",
-    "x_initial = 3.0 # This is the initial guess\n",
+    "x0 = 1.0 # This is the initial guess\n",
     "max_iter = 20 # % This is the maximum number of iterations allowed\n",
     "tolerance = 1e-4 #% Tolerance for which f(x) must be less than to determine root\n",
-    "num_decimal_places = 4\n",
     "\n",
-    "x0 = x_initial\n",
+    "num_decimal_places = 4\n",
     "\n",
     "for i in range(1,max_iter):\n",
     "\n",
@@ -201,6 +200,13 @@
     "\n",
     "Find the angle $\\theta$ that the footballer must launch the ball by the secant method to four decimal places. Apply initial guesses of 0.6 and 0.65 rad. Set the tolerance at 0.0001."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
