--- a/topic_04_newtons_method.ipynb
+++ b/topic_04_newtons_method.ipynb
@@ -74,12 +74,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Function that we are finding the root of\n",
     "def fx(x):\n",
     "    \n",
     "    y = x**2 - 5*x + 6\n",
     "    \n",
     "    return y\n",
     "\n",
+    "# Derivative of the function that we are finding the root of\n",
     "def dfdx(x):\n",
     "    \n",
     "    y = 2*x - 5\n",
@@ -93,7 +95,7 @@
     "\n",
     "num_decimal_places = 4\n",
     "\n",
-    "for i in range(1,max_iter):\n",
+    "for i in range(1,max_iter + 1):\n",
     "\n",
     "    if abs(fx(x0)) < tolerance:\n",
     "        print(f'\\nThe root of the equation is {round(x0,num_decimal_places)}.\\n')\n",
