--- a/topic_04_newtons_method.ipynb
+++ b/topic_04_newtons_method.ipynb
@@ -132,7 +132,7 @@
     "The variation in temperature of a copper rod when a current is applied is given by the following first order differential equation:\n",
     "$$\\frac{dT}{dt}=\\frac{I^2R^{\\prime}_e-\\pi Dh\\left(T-T_{\\alpha}\\right)-\\pi D \\epsilon \\sigma \\left(T^4 - T^4_{sur}\\right)}{\\rho c \\left(\\pi D^2/4\\right)}$$\n",
     " \n",
-    "where $I=10$ A, $R^{\\prime}_e=0.4$ $\\frac{\\Omega}{\\text{m}}$, $T_{sur}=300$ K, $T_{\\alpha}=300$ K, $h=100$ $\\frac{\\text{W}}{\\text{m}^2}$, $\\epsilon=0.8$, $\\sigma=5.67 \\times 10^{-8}$ $\\frac{\\text{W}}{\\text{m}^2\\text{K}}$, $D=1$ mm, $\\rho=8800$ $\\frac{\\text{kg}}{\\text{m}^3}$, $c=420$ $\\frac{\\text{J}}{\\text{kgK}}$.\n",
+    "where $I=10$ A, $R^{\\prime}_e=0.4$ $\\frac{\\Omega}{\\text{m}}$, $T_{sur}=300$ K, $T_{\\alpha}=300$ K, $h=100$ $\\frac{\\text{W}}{\\text{m}^2}$, $\\epsilon=0.8$, $\\sigma=5.67 \\times 10^{-8}$ $\\frac{\\text{W}}{\\text{m}^2\\text{K}}$, $D=0.001$ m, $\\rho=8800$ $\\frac{\\text{kg}}{\\text{m}^3}$, $c=420$ $\\frac{\\text{J}}{\\text{kgK}}$.\n",
     "\n",
     "Find the steady state temperature values in kelvin by using the Newton method. Use an initial guess of 300 K and apply a tolerance value of 0.001.\n",
     "\n",
@@ -190,7 +190,7 @@
     "\n",
     "$$\\frac{1}{f^{0.5}}=-2\\ln\\left(\\frac{\\epsilon/D}{3.7}+\\frac{2.51}{Ref^{0.5}}\\right)$$\n",
     " \n",
-    "where $\\epsilon=90$  micron is the roughness, $D=0.15$ m is the pipe diameter, $Re=3 \\times 10^5$  is the Reynold's number.\n",
+    "where $\\epsilon=90e-6$ m is the roughness, $D=0.15$ m is the pipe diameter, $Re=3 \\times 10^5$  is the Reynold's number.\n",
     "Find the friction factor $f$ by the secant method. Apply a tolerance value of 0.001 with initial guess values of 0.006 and 0.005.\n",
     "\n",
     "## Problem 4\n",
