--- a/topic_04_newtons_method.ipynb
+++ b/topic_04_newtons_method.ipynb
@@ -162,7 +162,7 @@
     "max_iter = 20 # This is the maximum number of iterations allowed\n",
     "tolerance = 1e-4 # Tolerance for which f(x) must be less than to determine root\n",
     "\n",
-    "for i in range(1,max_iter):\n",
+    "for i in range(1,max_iter + 1):\n",
     "\n",
     "    if abs(gx(x0)) < tolerance:\n",
     "        print(f'\\nThe root of the equation is {round(x0,4)}.\\n')\n",
