--- a/topic_05_arrays_interpolation.ipynb
+++ b/topic_05_arrays_interpolation.ipynb
@@ -15,6 +15,22 @@
     "\n",
     "You can install the library in Thonny by clicking on *Tools->Manage packages* and typing *numpy* into the text box at the top.\n",
     "\n",
+    "**Note: if running this notebook online, you need to install numpy by running the cell below:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip3 install numpy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "To use the library we can import the library at the top of the script."
    ]
   },
