--- a/topic_05_arrays_interpolation.ipynb
+++ b/topic_05_arrays_interpolation.ipynb
@@ -112,13 +112,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a[0:1]"
+    "a[0:2]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Note that it goes to one short of the index after the colon.\n",
+    "\n",
     "The variable *a* is a one dimensional array. We can create arrays of any number of dimensions. For example, the following code creates a two-dimensional array."
    ]
   },
@@ -180,10 +182,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "You can access the values in the third column by typing:"
    ]
@@ -244,8 +244,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "d = np.array[1, 2, 3, 4]\n",
-    "e = np.array[5, 6, 7, 8]\n",
+    "d = np.array([1, 2, 3, 4])\n",
+    "e = np.array([5, 6, 7, 8])\n",
     "d+e"
    ]
   },
@@ -343,7 +343,7 @@
     "## Exercises\n",
     "1. Create a vector that has values -10 to 16 in steps of 2.\n",
     "2. Create a Python script that calculates the sum of the following series:\n",
-    "$$1^2+2^2+3^2+4^2+5^2+\\ldots+10000^2$$\n",
+    "$$1^2+2^2+3^2+4^2+5^2+\\ldots+1000^2$$\n",
     " \n",
     "3. Calculate the volume of 5 cylinders whose diameters are 2.2 m, 3.2 m, 4.3 m, 5.5 m, and 6.1 m. The height of each cylinder is 5 m. Do the problem in two ways: using for loops and not using for loops.\n",
     "4. Repeat problem 3 but this time the heights of the cylinders are different. They are 2.0 m, 2.3 m, 2.6 m, 3.1 m, 3.5 m. Do the problem in two ways: using for loops and not using for loops.\n",
