--- a/topic_06_numerical_differentiation.ipynb
+++ b/topic_06_numerical_differentiation.ipynb
@@ -72,7 +72,7 @@
     "Modify the script above to include the exact derivative of the function at $x=3$. Include the exact derivative in the table.\n",
     "We will now look at two other methods of estimating the first derivative of a function.\n",
     "\n",
-    "### Forward difference\n",
+    "### Backward difference\n",
     "Consider a function $f(x)$. By expanding the function in a Taylor's series, it can be shown that the first derivative of the function at $x=a$, $f'(a)$ is approximated by\n",
     "\n",
     "$$f'(a)=\\frac{f(a)-f(a-h)}{h}$$\n",
