--- a/topic_06_numerical_differentiation.ipynb
+++ b/topic_06_numerical_differentiation.ipynb
@@ -107,6 +107,8 @@
     "\n",
     "## Problem 2\n",
     "The distribution of the velocity $u$ across the cross-section of a straight pipe for steady flow is given by Poiseuille's equation:\n",
+    "\n",
+    "$$u(r)=\\frac{k_s}{4\\mu}\\left(r^2-a^2\\right)$$\n",
     " \n",
     "where $k_s=-200$ Pa/m is the pressure gradient; $\\mu=0.0035$ Pas is the viscosity; $a=15$ mm is the radius.\n",
     "The shear stress in the fluid is given by\n",
