--- a/topic_08_first_order_IVP.ipynb
+++ b/topic_08_first_order_IVP.ipynb
@@ -43,7 +43,7 @@
     "## Exercise\n",
     "Write a Python script to solve the following initial value problem using the Euler method.\n",
     "\n",
-    "$$\\frac{dy}{dt}=x, y(0)=0 \\text{ for } 0 <=x<=1$$\n",
+    "$$\\frac{dy}{dx}=x, y(0)=0 \\text{ for } 0 <=x<=1$$\n",
     " \n",
     "Use a step size $h=0.1$.\n",
     "\n",
