--- a/topic_08_first_order_IVP.ipynb
+++ b/topic_08_first_order_IVP.ipynb
@@ -68,7 +68,7 @@
     "$$I(t)=5-5e^{-3t}$$\n",
     " \n",
     "## Problem 2\n",
-    "A spherical water tank has a radius   m and is emptied through a circular hole of radius   m at the bottom. The top of the tank is open to the atmosphere. The instantaneous water level   in the tank can be determined by the following first order differential equation.\n",
+    "A spherical water tank has a radius $R=4$  m and is emptied through a circular hole of radius $r=0.2$ m at the bottom. The top of the tank is open to the atmosphere. The instantaneous water level $h$ in the tank can be determined by the following first order differential equation.\n",
     "\n",
     "$$\\frac{dh}{dt}=-\\frac{r^2\\sqrt{2gh}}{2hR-h^2}$$\n",
     " \n",
