--- a/topic_09_integration.ipynb
+++ b/topic_09_integration.ipynb
@@ -56,19 +56,28 @@
     "\n",
     "Find, using the midpoint and Simpson's 1/3 rule, how far the airplane travels between the velocity $v=96$ m/s to $v=60$ m/s.\n",
     "\n",
-    "Hint: rearrange the above equation to get only $\\frac{dv}{dx}$ on the left hand side.\n",
+    "Hint: rearrange the above equation to get only $\\frac{dv}{dx}$ on the left hand side and invert to get $\\frac{dx}{dv}$.\n",
     "\n",
     "\n",
     "## Problem 3\n",
-    "The roof of a silo is made by revolving the curve   about the y-axis. \n",
+    "The roof of a silo is made by revolving the curve $y=10\\cos\\left(\\frac{\\pi}{10}x\\right)$ about the y-axis. \n",
     "\n",
     "The surface area of the roof of the silo is given by\n",
+    "\n",
+    "$$A=2\\pi\\int_0^6 x\\sqrt{1 + \\left(\\frac{dy}{dx}\\right)^2}dx$$\n",
     "\n",
     "Find the surface area in m$^2$ of the silo by Simpson’s Rule with 6 subintervals. Apply the\n",
     "central divided difference method for the derivative with an interval size of 0.1.\n",
     " \n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
