--- a/topic_01_intro.ipynb
+++ b/topic_01_intro.ipynb
@@ -224,7 +224,7 @@
    "metadata": {},
    "source": [
     "There are some rules and conventions on naming variables. The rules are:\n",
-    "- They must start with a letter or underscore, e.g. `velocity`, `\\_speed`\n",
+    "- They must start with a letter or underscore, e.g. `velocity`, `\_speed`\n",
     "- The remainder of the variable name can contain letters, numbers, and underscores, e.g. `cylinder_height`, `direction1`\n",
     "- They are case sensitive, i.e. `velocity` and `VELOCITY` are two different variables\n",
     "\n",
@@ -384,7 +384,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `input` command reads input as strings. If you want to read a number in you need to convert it to am integer or float. In the above program, the strings were converted to floats using the `float()` command. If you want to read them in as integers, you could use the `int()` command.\n",
+    "The `input` command reads input as strings. If you want to read a number in you need to convert it to an integer or float. In the above program, the strings were converted to floats using the `float()` command. If you want to read them in as integers, you could use the `int()` command.\n",
     "\n",
     "When outputting the numbers to the shell using the `print` command, you need to convert the float variables to strings using the `str()` command.\n",
     "\n",
