--- a/topic_01_intro.ipynb
+++ b/topic_01_intro.ipynb
@@ -224,7 +224,7 @@
    "metadata": {},
    "source": [
     "There are some rules and conventions on naming variables. The rules are:\n",
-    "- They must start with a letter or underscore, e.g. `velocity`, `\_speed`\n",
+    "- They must start with a letter or underscore, e.g. `velocity`, `_speed`\n",
     "- The remainder of the variable name can contain letters, numbers, and underscores, e.g. `cylinder_height`, `direction1`\n",
     "- They are case sensitive, i.e. `velocity` and `VELOCITY` are two different variables\n",
     "\n",
