--- a/topic_01_intro.ipynb
+++ b/topic_01_intro.ipynb
@@ -6,12 +6,12 @@
    "source": [
     "# Introducing Python\n",
     "\n",
-    "<img src=\"./img/Python.svg.png\" alt=\"Python symbol\" align='right' style=\"width: 200px;\"/>This lesson introduces Python, the Thonny integrated development environment, and some basic operations in Python. By the end of the lesson, you should be able to:\n",
-    "1.\tlist some applications of Python\n",
-    "2.\tnavigate the Thonny IDE\n",
-    "3.\tuse the shell as a calculator\n",
-    "4.\tcreate variables\n",
-    "5.\tcreate and run some simple Python programs\n",
+    "<img src=\"./img/Python.svg.png\" alt=\"Python symbol\" align='right' style=\"width: 200px;\"/>This lesson introduces Python, the Thonny integrated development environment, and some basic operations in Python. By the end of the lesson, you should be able to:\n\n",
+    "1.\tlist some applications of Python\n\n",
+    "2.\tnavigate the Thonny IDE\n\n",
+    "3.\tuse the shell as a calculator\n\n",
+    "4.\tcreate variables\n\n",
+    "5.\tcreate and run some simple Python programs\n\n",
     "\n",
     "\n",
     "\n",
