--- a/topic_02_debugging_if_functions.ipynb
+++ b/topic_02_debugging_if_functions.ipynb
@@ -236,7 +236,7 @@
     "Note the effect of the number before the decimal point. This will be useful when we create tables of numbers and we want them to be nicely aligned.\n",
     "## Exercises\n",
     "Create a Python script to do the following:\n",
-    "3.\tAsk the user for any number between 0 and 100. If they input a number outside this range, tell them it is outside the range. Otherwise tell them if it is less than 50 or greater than 50. Format the output so that the number is to three places of decimal.\n",
+    "3.\tAsk the user for any number between 0 and 100. If they input a number outside this range, tell them it is outside the range. Otherwise tell them if it is less than 50 or greater than 50. Format the output so that the number is to three places of decimal.\n\n",
     "\n",
     "## Creating and using functions\n",
     "A function is a block of code that performs an action and can be reused. Functions can accept input and output arguments. This makes them different from the scripts we have written already, which do not accept any arguments.\n",
@@ -281,11 +281,11 @@
     "## Exercises\n",
     "Create Python scripts and functions to do the following:\n",
     
-    "4.\tCreate a function that calculates the stress of a material. The input arguments for the function are the strain and Young's modulus; the output argument is the stress. Call the function from a script where the user is asked for the strain and Young's modulus. The script also prints the stress to the output window.\n",
+    "4.\tCreate a function that calculates the stress of a material. The input arguments for the function are the strain and Young's modulus; the output argument is the stress. Call the function from a script where the user is asked for the strain and Young's modulus. The script also prints the stress to the output window.\n\n",
     
-    "5.\tCreate a function that calculates the Reynold's number for flow in a pipe. The input arguments are the velocity, diameter, and kinematic viscosity; the output argument is the Reynold's number. Call the function from a script where the user is asked for the velocity, diameter, and viscosity.\n",
+    "5.\tCreate a function that calculates the Reynold's number for flow in a pipe. The input arguments are the velocity, diameter, and kinematic viscosity; the output argument is the Reynold's number. Call the function from a script where the user is asked for the velocity, diameter, and viscosity.\n\n",
     
-    "6.\tModify the script in the previous problem to tell the user whether the flow is laminar (Re < 2000), transitional (2000 < Re < 2500), or turbulent (Re > 2500).\n"
+    "6.\tModify the script in the previous problem to tell the user whether the flow is laminar (Re < 2000), transitional (2000 < Re < 2500), or turbulent (Re > 2500).\n\n"
    ]
   },
   {
