--- a/topic_02_debugging_if_functions.ipynb
+++ b/topic_02_debugging_if_functions.ipynb
@@ -235,7 +235,7 @@
    "source": [
     "Note the effect of the number before the decimal point. This will be useful when we create tables of numbers and we want them to be nicely aligned.\n",
     "## Exercises\n",
-    "Create a Python script to do the following:\n",
+    "Create a Python script to do the following:\n\n",
     "3.\tAsk the user for any number between 0 and 100. If they input a number outside this range, tell them it is outside the range. Otherwise tell them if it is less than 50 or greater than 50. Format the output so that the number is to three places of decimal.\n\n",
     "\n",
     "## Creating and using functions\n",
