--- a/topic_02_debugging_if_functions.ipynb
+++ b/topic_02_debugging_if_functions.ipynb
@@ -50,7 +50,7 @@
     "When a program does not run read the messages that Thonny is giving you to help fix the code.\n",
     "\n",
     "## Exercises\n",
-    "1.\tCorrect the remaining errors in the script above.\n",
+    "1.\tCorrect the remaining errors in the script above.\n\n",
     "2.\tCopy the following code into a script and correct it. Read the messages Thonny is telling you to find the errors."
    ]
   },
