--- a/topic_02_debugging_if_functions.ipynb
+++ b/topic_02_debugging_if_functions.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Debugging, conditional statements, functions\n",
     "\n",
-    "In this lesson, we will focus on finding and correcting errors in code; making decisions; and using functions. By the end of the session, you should be able to:\n",
+    "In this lesson, we will focus on finding and correcting errors in code; making decisions; and using functions. By the end of the session, you should be able to:\n\n",
     "1.\tread Python error messages and fix the code.\n\n",
     "2.\tuse if/elsif/else statements in Python to make decisions.\n\n",
     "3.\tcreate and call your own functions to do calculations.\n\n",
