--- a/topic_02_debugging_if_functions.ipynb
+++ b/topic_02_debugging_if_functions.ipynb
@@ -279,7 +279,7 @@
     "Functions can be defined in the script file before they are called. They can also be located in another file but in this case they must be imported. For now, we will define the functions in the same file as the script in which they are called.\n",
     "\n",
     "## Exercises\n",
-    "Create Python scripts and functions to do the following:\n",
+    "Create Python scripts and functions to do the following:  ",
     
     "4.\tCreate a function that calculates the stress of a material. The input arguments for the function are the strain and Young's modulus; the output argument is the stress. Call the function from a script where the user is asked for the strain and Young's modulus. The script also prints the stress to the output window.\n\n",
     
